web/static/css/app.css
body {
  font-family: Roboto, verdana, arial, helvetica, sans-serif;
}

header a:hover {
  text-decoration: none;
}

h1.title, h1.subtitle {
  margin-top: 0;
  margin-right: 10px;
}

h1.title {
  line-height: 0.9em;
  margin-bottom: 20px;
}

h1.title small {
}

#main {
  display: none;
}

#main.visible {
  display: block;
  animation-name: fadeIn;
  animation-iteration-count: 1;
  animation-duration: 0.3s;
}

.btn-stackable {
  margin-bottom: 10px;
}

.game, .game--completed {
  padding-top: 20px;
  padding-bottom: 0;
  animation-name: fadeIn;
  animation-iteration-count: 1;
  animation-duration: 1.5s;
}

.memory {
  position: relative;
  width: 100%;
  padding-bottom: 100%;
  margin-bottom: 20px;
}

.footer {
  margin-top: 40px;
  font-size: 0.9em;
  /* background: #e6f3f7; */
}

.footer a {
  margin-right: 20px;
  display: inline-block;
}

.footer .col-md-6 {
  padding-top: 4px;
  padding-bottom: 4px;
}

.footer__lang {
  text-align: right;
}

.flag-icon-ru {
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.3);
}

li.left {
  float: left;
}

li.right {
  float: right;
  padding-right: 0;
  padding-left: 20px;
}

.card-row {
  position: absolute;
  width: 100%;
  left: 0;
}

.card-wrapper {
  position: absolute;
  top: 0;
  height: 100%;
}

.card {
  width: 100%;
  height: 100%;
  transform-style: preserve-3d;
  transition: transform .2s;
}

.card .front {
  background-color: #BDE5F0;
  z-index: 2;
  transform: rotateY(0);
}

.front img {
  width: 60%;
}

.card--clickable {
  cursor: pointer;
}

.back img {
  width: 80%;
  height: 80%;
}

.centerer {
  display: inline-block;
  vertical-align: middle;
  height: 100%;
}

.card.flipped {
  transform: rotateY(180deg);
}

.card.cleared {
  /* opacity: 0; */
  transform: rotateY(180deg);
}

.card.cleared .back {
  opacity: 0;
}

.front, .back {
  border: 1px #b9d9e4 solid;
  transition: opacity 0.7s;
  display: block;
  position: absolute;
  top: 3%;
  left: 3%;
  width: 94%;
  height: 94%;
  backface-visibility: hidden;
  -webkit-backface-visibility: hidden;
  text-align: center;
}

.card .back {
  transform: rotateY(-180deg);
  background-color: #fff;
}

.players-bar {
  margin-bottom: 20px;
}

.players-bar .not-joined {
  color: #ccc;
}

.players-bar .offline {
  color: #ccc;
}

.players-bar .active {
  font-weight: bold;
  color: #000;
}

.player__name {
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.player__name:before {
  content: " ";
  width: 20px;
  color: orange;
  display: inline-block;
}

.active .player__name:before {
  content: "➔";
  font-weight: bold;
}

.players-bar .active.player-turn {
  /* background-color: #ccffd2; */
}

.players-bar .player__score {
  text-align: right;
  /* display: inline-block; */
  /* float: right; */
  /* padding-right: 10px; */
  /* width: 100%; */
}

label.game-url {
  display: inline-block;
  width: 100%;
}

.turn-banner {
  padding: 5px;
  margin-top: 5px;
  font-size: 1.2em;
  line-height: 20px;
  background-color: lightgreen;
  text-align: center;
  opacity: 0;
}

.btn-restart {
  margin-bottom: -15px;
}

.turn-banner--your-turn {
  opacity: 1;
}

.theme-title {
  margin-top: 5px;
}

.header-logo--sm {
  height: 30px;
  width: 30px;
}

.header-logo--lg {
  height: 50px;
  width: 50px;
}

.pairs-modal-content label {
  padding-top: 15px;
  padding-bottom: 10px;
}

.pairs-modal-content h2 {
  margin-bottom: 30px;
}

.pairs-modal-content h4 {
  margin: 30px 0;
  line-height: 1.5em;
}

.screenshot img {
  -webkit-box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.2);
  -moz-box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.2);
  box-shadow: 2px 2px 10px 0px rgba(0,0,0,0.2)
}

.screenshot {
  margin-bottom: 10px;
}

.landing-text {
  /* min-width: 200px; */
}

.btn-start {
  margin-top: 50px;
  margin-bottom: 50px;
}

.btn-go {
  /* width: 200px; */
  width: 100%;
}

.inter-button {
  text-align: center;
  font-size: 2em;
}

.players-bar header {
  font-size: 1.5em;
  margin-bottom: 10px;
}

.rules {
  margin-top: 30px;
  /* border-left: solid #ddd 5px; */
  /* padding-left: 20px; */
  /* display: block; */
  font-size: 1.5em;
  margin-bottom: 30px;
}

.subboard {
  margin-bottom: 20px;
}

.subboard .player {
  line-height: 1.5em;
  font-size: 1.5em;
}

.player-list-header {
  border-bottom: 2px solid #eba774;
  margin-top: 0;
  padding-bottom: 4px;
}

.score-title {
  border-bottom: 2px solid #eba774;
  margin-top: 0;
  padding-bottom: 4px;
}

.trophy--gold {
  color: gold;
}

.trophy--silver {
  color: silver;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}

.play-again {
  margin-bottom: 20px;
}

.btn-theme {
  height: 110px;
  width: 110px;
  margin-right: 10px;
  margin-bottom: 10px;
}

.btn-replay {
  margin-top: 10px;
  margin-right: 10px;
  margin-bottom: 20px;
}

.score__accuracy {
  color: #ccc;
}

.score__player-name {
  max-height: 1.2em;
  overflow: hidden;
}

.accuracy {
  margin-bottom: 30px;
}

.pairs-overlay{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background-color: rgba(0,0,0,0.2);
}

.pairs-modal {
    width: 80%;
    height: 160px;
    margin-left: -40%;
    margin-top: -80px;
    padding: 20px;
    position: absolute;
    top: 50%;
    left: 50%;
    background-color: white;
    border-radius: 5px;
    z-index: 11;
}

.game-option {
  height: 230px;
  padding-top: 1px;
  padding-left: 20px;
  padding-right: 20px;
  padding-bottom: 20px;
}

.game-options {
  margin-top: 30px;
  margin-bottom: 30px;
}

.game-options h3 {
  color: #c57b7b !important;
}

.game-option__description{
  /* height: 150px; */
  color: #444;
  font-size: 1.3em;
  margin-bottom: 10px;
}

.game-option h3 {
  color: #444;
}

.option-one {
  background-color: #ffd;
}

.option-two {
  background-color: #eff;
}

.option-three {
  background-color: #fef;
}

.game-option-icon {
  float: left;
  margin-right: 20px;
  margin-top: 22px;
  margin-bottom: 10px;
  /* height: 100%; */
}

.game-option-icon img {
  width: 70px;
}

.game-option__actions {
  text-align: center;
}

.game-settings {
  padding: 10px;
  margin-bottom: 20px;
  background-color: #ddf0f8;
}

.btn-game-setting {
  width: 100%;
  height: 3em;
  line-height: 2em;
  font-size: 1.5em;
  margin-top: 5px;
  margin-bottom: 5px;
}

.theme-icon {
  width: 40px;
  margin-right: 5px;
}

.boardsize-icon {
  /* font-size: 1.5em; */
  margin-right: 5px;
}

.btn-go-wrapper {
  margin-top: 20px;
  margin-bottom: 10px;
}

.new-game-selector {
  margin-bottom: 30px;
}

.pairs-modal-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 10;
  background-color: rgba(0,0,0,0.2);
  animation-name: fadeIn;
  animation-iteration-count: 1;
  animation-duration: 0.3s;
}

.pairs-modal-dialog {
  width: auto;
  margin: 10px;
  background-color: white;
  border-radius: 5px;
  overflow-Y: scroll;
  padding: 20px 30px 50px;
  animation-name: fadeIn;
  animation-iteration-count: 1;
  animation-duration: 0.3s;
}

.theme-hard:hover {
  background-color: #ffd5d5;
}

.theme-easy:hover {
  background-color: #e5ffe5;
}

.theme-medium:hover {
  background-color: #fbf8c3;
}

.theme-easy {
  background-color: #efe;
}

.theme-medium {
  background-color: #fdfbda;
}

.theme-hard {
  background-color: #fdd;
}

.level-legend__block {
  display: inline-block;
  width: 20px;
  height: 20px;
  position: relative;
  top: 5px;
  margin-left: 10px;
  border: 1px #ccc solid;
}

.level-legend {
  margin-bottom: 20px;
}

.modal__close {
  cursor: pointer;
  color: #ddd;
}

.modal__close :hover {
  color: #ccc;
}

@media (min-width: 768px) {
  .pairs-modal-dialog {
    width: 660px;
    margin: 30px auto;
  }
}

@media (min-width: 992px) {
  .game-option {
    height: 200px;
  }
}

.game-settings-form {
  background-color: #ddf0f8;
  padding: 10px 20px;
}

.random-game-label {
  margin-top: 50px;
  margin-bottom: 30px;
  color: #777;
}

.centered-content {
  text-align: center;
}

.right-aligned-content {
  text-align: right;
}

.random-game-section {
  margin-top: 60px;
  margin-bottom: 40px;
}

.elm-game-selector {
  margin-top: 30px;
}

.action-title {
  margin-bottom: 20px;
}

.landing-section {
  margin-bottom: 30px;
}

